--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Watcher">
-        <activity android:name=".SplashScreen"></activity>
-        <activity android:name=".SignUp" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".ResetPasswordActivity"></activity>
+        <activity android:name=".HomePageActivity" />
+        <activity android:name=".SplashScreen" />
+        <activity android:name=".SignUp" android:parentActivityName=".MainActivity">
+
+        </activity>
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
