--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Watcher">
-        <activity android:name=".SplashScreen"></activity>
+        <activity android:name=".MainActivity2"></activity>
+        <activity android:name=".SplashScreen" />
         <activity android:name=".SignUp" />
         <activity android:name=".MainActivity">
             <intent-filter>
