--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Watcher">
-        <activity android:name=".FinalHomeActivity2"></activity>
+        <activity android:name=".FindFriendsActivity"></activity>
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".FinalHomeActivity2" >
+
+        </activity>
         <activity android:name=".ResetPasswordActivity" />
-        <activity android:name=".HomePageActivity" />
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +25,9 @@
         <activity
             android:name=".SignUp"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity" >
+
+        </activity>
     </application>
 
 </manifest>
