--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,12 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+allprojects{
+    repositories {
+        jcenter()
+        maven{url 'https://jitpack.io'}
+    }
+}
 
 dependencies {
 
@@ -43,4 +49,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:27.0.0')
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    compile 'com.github.GoodieBag:Pinview:v1.3'
+
 }
