--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,21 +9,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Watcher">
-        <activity android:name=".ResetPasswordActivity"></activity>
-        <activity android:name=".HomePageActivity" />
-        <activity android:name=".SplashScreen" >
+        <activity android:name=".SplashScreen"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUp" android:parentActivityName=".MainActivity">
+        <activity android:name=".SignUp" />
+        <activity android:name=".MainActivity">
 
         </activity>
-        <activity android:name=".MainActivity" >
+        <activity android:name=".Verification">
 
         </activity>
+        <activity android:name=".ResetPasswordActivity"/>
+
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
