--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,12 +28,14 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+
 allprojects{
     repositories {
         jcenter()
         maven{url 'https://jitpack.io'}
     }
 }
+
 
 dependencies {
 
@@ -43,19 +45,29 @@ dependencies {
     implementation "com.google.firebase:firebase-auth:20.0.4"
     implementation 'com.google.firebase:firebase-database:19.7.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation "com.google.android.gms:play-services-location:18.0.0"
+    implementation 'com.google.android.libraries.places:places:2.4.0'
+    implementation 'com.google.android:flexbox:2.0.1'
+    implementation 'com.google.firebase:firebase-storage:19.2.2'
     implementation 'io.paperdb:paperdb:2.7.1'
     implementation 'androidx.browser:browser:1.3.0'
+    implementation 'androidx.browser:browser:1.3.0'
+    compile 'com.github.GoodieBag:Pinview:v1.3'
+
     implementation 'com.firebaseui:firebase-ui-database:7.1.1'
     implementation 'com.google.firebase:firebase-core:18.0.3'
     implementation 'com.google.firebase:firebase-messaging:21.1.0'
     implementation platform('com.google.firebase:firebase-bom:27.0.0')
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    compile 'com.github.GoodieBag:Pinview:v1.3'
-
 }
