--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.watcher">
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the "MyLocation" functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -9,29 +18,47 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Watcher">
-        <activity android:name=".FindFriendsActivity"></activity>
-        <activity android:name=".ProfileActivity" />
-        <activity android:name=".FinalHomeActivity2" >
+        <activity android:name=".ConfirmPassword"></activity>
+        <activity android:name=".SettingActivity" />
+        <activity android:name=".LocationMapActivity" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
 
-        </activity>
-        <activity android:name=".Verification"/>
-        <activity android:name=".MessageActivity" >
-
-
-
-        </activity>
-        <activity android:name=".ResetPasswordActivity" />
-        <activity android:name=".SplashScreen">
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
-        </activity>
+        </service>
+
+        <activity
+            android:name=".FindFriendsActivity"
+            android:parentActivityName=".FinalHomeActivity2" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".FinalHomeActivity2" />
+        <activity android:name=".MessageActivity" />
+        <activity android:name=".ResetPasswordActivity" />
+        <activity android:name=".SplashScreen" />
+        <activity android:name=".Verification" />
         <activity
             android:name=".SignUp"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
