--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +20,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Watcher">
-        <activity android:name=".COnfigureUser"></activity>
+        <activity android:name=".popUpActivity"
+            android:theme="@style/Theme.Watcher.Customtheme">
+
+        </activity>
+        <activity android:name=".COnfigureUser" />
         <activity android:name=".ConfirmPassword" />
         <activity android:name=".SettingActivity" />
         <activity android:name=".LocationMapActivity" />
